--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ nav{
   box-shadow: 10px 100px 500px #233554;
 }
 
-.navbar button{
+.navbar .navitem{
   color: #ccd6f6;
   background-color: #0a192f;
   border: none;
@@ -30,9 +30,10 @@ nav{
   transition-timing-function: ease;
   font-size: 16px;
   margin-right: 40px;
+  text-decoration: none;
 }
 
-.navbar button:hover{
+.navbar .navitem:hover{
   color: #64ffda;
 }
 
@@ -77,7 +78,7 @@ main{
   font-family: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
   font-size: clamp(40px, 8vw, 80px);
   line-height: 0.9;
-  margin: 16px 0px 0px;
+  margin: 24px 0px 0px;
 }
 
 .about .name{
@@ -113,10 +114,36 @@ main{
   background-color: rgba(100, 255, 218, 0.1);
 }
 
+.button{
+  background-color: #0a192f;
+  color: #64ffda;
+  border: solid 1px #64ffda;
+  font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 1rem 1rem;
+  cursor: pointer;
+  transition: 1s;
+  transition-timing-function: ease;
+  text-decoration: none;
+}
+
+.button:hover{
+  background-color: rgba(100, 255, 218, 0.1);
+}
+
+.navButton{
+  margin-top: 50px;
+}
+
 /* About Me Section */
+.aboutPage{
+  display: flex;
+}
+
 .aboutMe{
   color: #ccd6f6;
-  padding-left: 10%;
+  padding-left: 5%;
   padding-right: 20px;
   padding-top: 100px;
   width: 70%;
@@ -143,39 +170,49 @@ main{
   list-style: none;
 }
 
-/* Work Section */
-.workMain{
-  display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:
-    "card-1 card-2"
-    "card-3 card-4"
-    "card-5 card-6";
-  padding-top: 70px;
+.profilePic{
+  margin-top: 120px;
+  margin-right: 10%;
+  margin-left: 5%;
+  border-radius: 10%;
+  width: 320px;
+  height: 320px;
+  background-color: rgba(100, 255, 218, 0.1);
 }
+
+
+/* Work Section */
 
 .card{
+  margin-top: 170px;
+}
+
+.card li{
+  list-style-type: none;
+}
+
+.card li{
   display: flex;
-  margin-top: 30px;
 }
 
-.workMain .cardImg{
+.cardImg{
   margin-top: 5px;
+  width: 250px;
+  height: 250px;
 }
 
-.workMain .cardText{
+.cardText{
   margin-left: 40px;
   height: 200px;
   color: #ccd6f6;
   max-width: 300px;
 }
 
-.workMain .cardText h2{
+.cardText h2{
   margin-top: 0px;
 }
 
-.workMain button{
+.card button{
   background-color: #0a192f;
   color: #64ffda;
   border: solid 1px #64ffda;
@@ -189,7 +226,7 @@ main{
   transition-timing-function: ease;
 }
 
-.workMain button:hover{
+.card button:hover{
   background-color: rgba(100, 255, 218, 0.1);
 }
 
