--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,14 @@ body {
 /* Navbar Section */
 nav{
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   height: 100px;
   width: 100%;
   position: fixed;
   border-bottom: solid 1px;
   background-color: #0a192f;
-  box-shadow: 10px 100px 500px #233554;
+  box-shadow: 10px 80px 200px #233554;
 }
 
 .navbar .navitem{
@@ -171,7 +171,7 @@ main{
 }
 
 .profilePic{
-  margin-top: 120px;
+  margin-top: 130px;
   margin-right: 10%;
   margin-left: 5%;
   border-radius: 10%;
@@ -184,20 +184,28 @@ main{
 /* Work Section */
 
 .card{
-  margin-top: 170px;
-}
-
-.card li{
-  list-style-type: none;
+  margin-top: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 120px;
 }
 
 .card li{
   display: flex;
+  align-items: center;
+  list-style-type: none;
+  border: 2px solid #8892b0;
+  border-radius: 10px;
+  padding: 5px 5px 10px 10px;
+  box-shadow: 10px 20px 70px #233554;
+  margin-top: 20px;
+  background-color: #112240;
 }
 
 .cardImg{
   margin-top: 5px;
-  width: 250px;
+  width: 350px;
   height: 250px;
 }
 
@@ -210,6 +218,12 @@ main{
 
 .cardText h2{
   margin-top: 0px;
+}
+
+.cardText a button{
+  margin-top: 20px;
+  width: 160px;
+  height: 60px;
 }
 
 .card button{
